--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog",
+  "name": "courses",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -10,20 +10,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nguyenchicao0703/NodeBlog.git"
+    "url": "git+https://github.com/nguyenchicao0703/NodeCoursesOnline.git"
   },
   "keywords": [
     "nodejs",
-    "blog",
+    "courses",
     "express",
     "mongodb"
   ],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/nguyenchicao0703/NodeBlog/issues"
+    "url": "https://github.com/nguyenchicao0703/NodeCoursesOnline/issues"
   },
-  "homepage": "https://github.com/nguyenchicao0703/NodeBlog#readme",
+  "homepage": "https://github.com/nguyenchicao0703/NodeCoursesOnline#readme",
   "dependencies": {
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2"
