--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
   },
   "homepage": "https://github.com/nguyenchicao0703/NodeCoursesOnline#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.1.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
     "node-sass": "^9.0.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   }
 }
